<resources>
    <string name="app_name">AppChat</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Signup</string>
    <string name="text_signup"><u>No account? Go to Signup</u></string>
    <string name="text_login"><u>Already have you account? Go to login</u></string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Logout</string>
    <string name="button_apply">Apply</string>
    <string name="button_delete">Delete account</string>
    <string name="hello_status_update_fragment">Hello status update fragment</string>
    <string name="hello_chats_fragment">Hello chats fragment</string>

</resources>